fixing spacing between title and footer links

--- a/client/src/resources/css/Footer.css
+++ b/client/src/resources/css/Footer.css
@@ -14,6 +14,7 @@
  #footer-title {
     font-family: 'Playfair Display';
     font-size: 15px;
+    margin: 2.5vw;
  }
 
  .footer-link {
